--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Hridoys PortFolio</title>
 </head>
 <body>
-   <section>
+   <section class="top-banner">
     <div class="half-weight">
         <h1>Welcome To</h1>
         <h1><span class="color-orange"> Mehede Hassans </span>World</h1>
@@ -22,6 +22,17 @@
        <div class="half-weight">
             <img src="images/jhankar.png" alt="">
         </div>
+   </section>
+   <section class="dream-big">
+    <div class="half-weight">
+        <img src="images/jhankar2.png" alt="">
+    </div>
+    <div class="half-weight">
+        <h1>Dream Big</h1>
+        <h2>Become a Web Developer</h2>
+        <p class="paragraf">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-button" target="_blank"  href="">DOWNLOAD RESUME</a>
+    </div>
    </section>
 
 </body>
