--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Hridoys PortFolio</title>
 </head>
 <body>
-   <section class="top-banner">
+   <section class="top-banner flaxiable-container">
     <div class="half-weight">
         <h1>Welcome To</h1>
         <h1><span class="color-orange"> Mehede Hassans </span>World</h1>
@@ -23,7 +23,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
    </section>
-   <section class="dream-big">
+   <section class="dream-big flaxiable-container">
     <div class="half-weight">
         <img src="images/jhankar2.png" alt="">
     </div>
@@ -34,6 +34,28 @@
         <a class="link-button" target="_blank"  href="">DOWNLOAD RESUME</a>
     </div>
    </section>
+   <section class="experince-area">
+    <h1>Experiences</h1>
+
+    <div class="flaxiable-container">
+
+        <div id="full-stack-developer" class="expeance-item">
+            <h1>Full Stack Web Develope</h1>
+            <h3 class="color-orange">2022-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web-developer" class="expeance-item">
+            <h1>Baby Web Developer</h1>
+            <h3 class="color-orange">2022-2024 | Programming Hero Learne</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+    
+        </div>
+
+    </div>
+   </section>
 
 </body>
+<footer> 
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p> 
+</footer>
 </html>
